--- a/src/app/my-profile/my-profile.component.html
+++ b/src/app/my-profile/my-profile.component.html
@@ -30,7 +30,7 @@
               <ion-icon name="person" size="large"></ion-icon>
             }
           </ion-avatar>
-          <ion-button fill="clear" size="small" class="change-avatar-btn">
+          <ion-button fill="clear" size="small" class="change-avatar-btn" (click)="changeProfilePhoto()">
             <ion-icon name="camera" slot="icon-only"></ion-icon>
           </ion-button>
         </div>
