--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,8 +8,8 @@
     
     @if (isAuthenticated() && userLocation) {
       <div class="location-container">
-        <div class="location-info" (click)="requestLocationAccess()">
-          <span class="location-text">{{ userLocation.address || 'Location not available' }}</span>
+        <div class="location-info" (click)="showLocationModal()">
+          <span class="location-text">{{ getFormattedAddress() }}</span>
         </div>
       </div>
     } @else if (isAuthenticated() && isRequestingLocation()) {
@@ -124,5 +124,65 @@
     </div>
   }
 </ion-content>
+
+<!-- Location Modal -->
+<ion-modal [isOpen]="isLocationModalOpen()" (didDismiss)="closeLocationModal()">
+  <ng-template>
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>{{ 'HOME.LOCATION_DETAILS' | translate }}</ion-title>
+        <ion-buttons slot="end">
+          <ion-button (click)="closeLocationModal()" fill="clear">
+            <ion-icon name="close" slot="icon-only"></ion-icon>
+          </ion-button>
+        </ion-buttons>
+      </ion-toolbar>
+    </ion-header>
+    
+    <ion-content class="ion-padding">
+      @if (userLocation) {
+        <div class="location-details">
+          <ion-item>
+            <ion-icon name="location" slot="start" color="primary"></ion-icon>
+            <ion-label>
+              <h2>{{ 'HOME.FULL_ADDRESS' | translate }}</h2>
+              <p>{{ userLocation.address || 'Location not available' }}</p>
+            </ion-label>
+          </ion-item>
+          
+          @if (userLocation.city) {
+            <ion-item>
+              <ion-icon name="business" slot="start" color="medium"></ion-icon>
+              <ion-label>
+                <h3>{{ 'HOME.CITY' | translate }}</h3>
+                <p>{{ userLocation.city }}</p>
+              </ion-label>
+            </ion-item>
+          }
+          
+          @if (userLocation.country) {
+            <ion-item>
+              <ion-icon name="flag" slot="start" color="medium"></ion-icon>
+              <ion-label>
+                <h3>{{ 'HOME.COUNTRY' | translate }}</h3>
+                <p>{{ userLocation.country }}</p>
+              </ion-label>
+            </ion-item>
+          }
+          
+          @if (userLocation.latitude && userLocation.longitude) {
+            <ion-item>
+              <ion-icon name="map" slot="start" color="medium"></ion-icon>
+              <ion-label>
+                <h3>{{ 'HOME.COORDINATES' | translate }}</h3>
+                <p>{{ userLocation.latitude }}, {{ userLocation.longitude }}</p>
+              </ion-label>
+            </ion-item>
+          }
+        </div>
+      }
+    </ion-content>
+  </ng-template>
+</ion-modal>
 
 
