--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -33,7 +33,7 @@
     
     <ion-buttons slot="end">
       <ion-button (click)="navigateToFilterPage()" fill="clear" class="filter-button">
-        <ion-icon name="globe" slot="icon-only"></ion-icon>
+        <ion-icon name="search" slot="icon-only"></ion-icon>
       </ion-button>
       <app-messages-button></app-messages-button>
       <app-settings-button (onSettingsClick)="presentSettingsModal()"></app-settings-button>
